# NeuroMed-Predict

./: .gitignore  LICENSE  README-CLOUD.md  README-LOCAL.md  README.md  docker-compose.yml  ip.py
azure/: deploy.sh  mailer.py  upload_data.py
azure/hooks/: manual-auth-hook.sh  manual-cleanup-hook.sh
azure/terraform/: main.tf  tests.tf  variables.tf
azure/test_data/: Data.json  doctors.csv
backend/: .dockerignore  Dockerfile  entrypoint.sh  gunicorn_conf.py  local.py  main.py  pyproject.toml  requirements.txt  tools.py
backend/GPT/: __init__.py  chat_handler.py  jsonSchemaValidation.py  main.py  prompts.py  secrets.py  similiarity.py  translator.py
backend/Models/: predict_1.pth  predict_2.pth
backend/Models/net/: predict_1.py  predict_2.py
cypress/: Dockerfile  cypress.config.js  entrypoint.sh
cypress/cypress/e2e/: changeThemeGPT.cy.js  checkForms.cy.js  checkLanguageGPT.cy.js  checkLanguages.cy.js  checkNotebooks.cy.js  checkTheme.cy.js  codeQuery.cy.js  contextCheckGPT.cy.js  databaseSearchGPT.cy.js  illegalQueryGPT.cy.js  info.cy.js  medQueryGPT.cy.js
frontend/: .dockerignore  Dockerfile  entrypoint.sh  package-lock.json  package.json  runtime-env.sh  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  i18n.ts  index.tsx
frontend/src/Components/: Diabetes.tsx  Heartdisease.tsx  Info.tsx  Main.tsx  NotFound.tsx  NotebookHeartdisease.tsx
frontend/src/Components/GPT/: GPT.tsx  (+5 more)
frontend/src/Utils/: formatMessageContent.ts
frontend/src/i18n/: en.json  pl.json
jupyter/: Diabetes_prediction.ipynb  Heartdisease_prediction.ipynb
